apps/mealie/manifests/app/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: mealie
  labels:
    app.kubernetes.io/name: mealie
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: mealie
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mealie
    spec:
      containers:
      - name: mealie
        image: ghcr.io/mealie-recipes/mealie:v3.21.0
        ports:
        - containerPort: 9000
          name: http
        resources:
          limits:
            cpu: 1
            memory: 512Mi
          requests:
            cpu: 100m
            memory: 128Mi
        volumeMounts:
        - name: data
          mountPath: /app/data/
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: data
