apps/mealie/manifests/app/tmp-svc-hass.yaml
apiVersion: v1
kind: Service
metadata:
  name: mealie-lb
  labels:
    app.kubernetes.io/name: mealie
spec:
  loadBalancerIP: 192.168.2.83
  type: LoadBalancer
  ports:
  - name: http
    port: 9000
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/name: mealie
