apps/mealie/manifests/app/ingress-cloudflare.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloudflare-ingress
  namespace: mealie
spec:
  ingressClassName: cloudflare
  rules:
    - host: recipes.krupa.net.pl
      http:
        paths:
          - backend:
              service:
                name: mealie
                port:
                  number: 9000
            path: /
            pathType: Prefix
