apps/mealie/manifests/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    probe: enabled
    probe-uri: /api/app/about
    reloader.homer/group: Ankh Cloud
    reloader.homer/logo: https://cdn.jsdelivr.net/npm/@loganmarchione/homelab-svg-assets@latest/assets/mealie.svg
    reloader.homer/name: Mealie
    reloader.homer/subtitle: Our recipes
  labels:
    app.kubernetes.io/name: mealie
  name: mealie
spec:
  ingressClassName: public
  rules:
    - host: recipes.krupa.net.pl
      http:
        paths:
          - backend:
              service:
                name: mealie
                port:
                  name: http
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - recipes.krupa.net.pl
      secretName: mealie-tls
